--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,6 @@
 {
-  "recommendations": ["johnsoncodehk.volar"]
+  "recommendations": [
+    "editorconfig.editorconfig",
+    "johnsoncodehk.volar"
+  ]
 }
