--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
     "editorconfig.editorconfig",
-    "johnsoncodehk.volar"
+    "johnsoncodehk.volar",
+    "dbaeumer.vscode-eslint"
   ]
 }
