--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "vite-boilerplate",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "dev": "vite",
+    "eslint": "eslint . --ext .js,.vue",
     "serve": "vite preview"
   },
   "dependencies": {
@@ -11,6 +12,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-unicorn": "^39.0.0",
+    "eslint-plugin-vue": "^8.1.1",
+    "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "vite": "^2.6.4"
   }
 }
