--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-unicorn": "^39.0.0",
     "eslint-plugin-vue": "^8.1.1",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "sass": "^1.43.5",
     "vite": "^2.6.4"
   }
 }
