--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "vite build",
     "dev": "vite",
     "eslint": "eslint . --ext .js,.vue",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "stylelint": "stylelint \"**/*.{css,scss,vue}\""
   },
   "dependencies": {
     "vue": "^3.2.16"
@@ -18,7 +19,12 @@
     "eslint-plugin-unicorn": "^39.0.0",
     "eslint-plugin-vue": "^8.1.1",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "postcss-html": "^1.3.0",
     "sass": "^1.43.5",
+    "stylelint": "^14.1.0",
+    "stylelint-config-recommended-vue": "^1.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-order": "^5.0.0",
     "vite": "^2.6.4"
   }
 }
