--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,24 @@
 {
-    "root": true,
-    "env": {"es2021": true, "node": true},
-    "parserOptions": {"ecmaVersion": "latest", "sourceType": "module"},
-    "ignorePatterns": ["node_modules/", "dist/"],
-    "extends": [
-      "eslint:recommended",
-      "airbnb-base",
-      "plugin:unicorn/recommended",
-      "plugin:vue/vue3-recommended",
-      "plugin:vuejs-accessibility/recommended"
-    ],
-    "overrides": [
-      {
-        "files": ["*.vue"],
-        "env": {
-          "es2021": true,
-          "vue/setup-compiler-macros": true
-        }
+  "root": true,
+  "env": { "es2021": true, "node": true },
+  "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
+  "ignorePatterns": ["node_modules/", "dist/"],
+  "extends": [
+    "eslint:recommended",
+    "airbnb-base",
+    "plugin:unicorn/recommended",
+    "plugin:vue/vue3-recommended",
+    "plugin:vuejs-accessibility/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "overrides": [
+    {
+      "files": ["*.vue"],
+      "env": {
+        "es2021": true,
+        "vue/setup-compiler-macros": true
       }
-    ],
-    "rules": { "unicorn/filename-case": "off" }
-  }
+    }
+  ],
+  "rules": { "unicorn/filename-case": "off" }
+}
