--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "vite build",
     "dev": "vite",
     "eslint": "eslint . --ext .js,.vue",
+    "lint": "npm run stylelint & npm run eslint",
     "serve": "vite preview",
     "stylelint": "stylelint \"**/*.{css,scss,vue}\""
   },
@@ -15,16 +16,21 @@
     "@vitejs/plugin-vue": "^1.9.3",
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-unicorn": "^39.0.0",
     "eslint-plugin-vue": "^8.1.1",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "postcss-html": "^1.3.0",
+    "prettier": "^2.5.0",
     "sass": "^1.43.5",
     "stylelint": "^14.1.0",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-order": "^5.0.0",
+    "stylelint-prettier": "^2.0.0",
     "vite": "^2.6.4"
   }
 }
