--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,5 @@
 {
-  "ignoreFiles": ["node_modules/"],
+  "ignoreFiles": ["node_modules/**/*", "dist/**/*"],
   "extends": [
     "stylelint-config-standard-scss",
     "stylelint-config-recommended-vue",
