--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,8 @@
         "map": [
           ["@", "./src"],
           ["@components", "./src/components"],
-          ["@styles", "./src/styles"]
+          ["@styles", "./src/styles"],
+          ["@views", "./src/views"]
         ],
         "extensions": [".js", ".vue"]
       }
