--- a/package.json
+++ b/package.json
@@ -12,32 +12,34 @@
     "stylelint": "stylelint \"**/*.{css,scss,vue}\""
   },
   "dependencies": {
-    "vue": "^3.2.26"
+    "vue": "^3.2.27",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.1",
-    "eslint": "^8.6.0",
+    "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-unicorn": "^40.0.0",
+    "eslint-plugin-unicorn": "^40.1.0",
     "eslint-plugin-vue": "^8.3.0",
     "eslint-plugin-vuejs-accessibility": "^1.1.1",
     "husky": "^7.0.0",
-    "lint-staged": "^12.1.7",
+    "lint-staged": "^12.2.1",
     "npm-run-all": "^4.1.5",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.0",
-    "sass": "^1.48.0",
+    "sass": "^1.49.0",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-prettier": "^2.0.0",
-    "vite": "^2.7.12"
+    "vite": "^2.7.13",
+    "vite-jest": "^0.1.4"
   },
   "lint-staged": {
     "*.{js,vue}": [
