--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
     "stylelint": "stylelint \"**/*.{css,scss,vue}\""
   },
   "dependencies": {
-    "vue": "^3.2.27",
+    "pinia": "^2.0.11",
+    "vue": "^3.2.29",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.0.1",
-    "eslint": "^8.7.0",
+    "@vitejs/plugin-vue": "^2.1.0",
+    "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-unicorn": "^40.1.0",
-    "eslint-plugin-vue": "^8.3.0",
+    "eslint-plugin-vue": "^8.4.0",
     "eslint-plugin-vuejs-accessibility": "^1.1.1",
     "husky": "^7.0.0",
-    "lint-staged": "^12.2.1",
+    "lint-staged": "^12.3.3",
     "npm-run-all": "^4.1.5",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.0",
-    "sass": "^1.49.0",
-    "stylelint": "^14.2.0",
+    "sass": "^1.49.7",
+    "stylelint": "^14.3.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
