--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,12 @@
   "root": true,
   "env": { "es2021": true, "node": true },
   "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
-  "ignorePatterns": ["node_modules/", "dist/"],
+  "ignorePatterns": ["node_modules/", "dist/", "coverage/"],
   "extends": [
     "eslint:recommended",
+    "plugin:security/recommended",
+    "plugin:eslint-comments/recommended",
+    "plugin:jsdoc/recommended",
     "airbnb-base",
     "plugin:unicorn/recommended",
     "plugin:vue/vue3-recommended",
