--- a/package.json
+++ b/package.json
@@ -12,34 +12,37 @@
     "stylelint": "stylelint \"**/*.{css,scss,vue}\""
   },
   "dependencies": {
-    "pinia": "^2.0.11",
-    "vue": "^3.2.29",
-    "vue-router": "^4.0.12"
+    "@vitejs/plugin-vue": "^2.3.3",
+    "pinia": "^2.0.14",
+    "postcss-html": "^1.4.1",
+    "sass": "^1.53.0",
+    "vite": "^2.9.13",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.1.0",
-    "eslint": "^8.8.0",
+    "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-unicorn": "^40.1.0",
-    "eslint-plugin-vue": "^8.4.0",
-    "eslint-plugin-vuejs-accessibility": "^1.1.1",
-    "husky": "^7.0.0",
-    "lint-staged": "^12.3.3",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-security": "^1.5.0",
+    "eslint-plugin-unicorn": "^43.0.0",
+    "eslint-plugin-vue": "^9.1.1",
+    "eslint-plugin-vuejs-accessibility": "^1.2.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
-    "postcss-html": "^1.3.0",
-    "prettier": "^2.5.0",
-    "sass": "^1.49.7",
-    "stylelint": "^14.3.0",
+    "prettier": "^2.7.1",
+    "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-recommended-vue": "^1.0.0",
-    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard-scss": "^4.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-prettier": "^2.0.0",
-    "vite": "^2.7.13",
     "vite-jest": "^0.1.4"
   },
   "lint-staged": {
